# SILVER-pain

./: .gitignore  LICENSE  README-2.md  README.md  TODO.md  process_older_adults_data.ipynb  process_older_adults_data.py  process_young_adults_data.ipynb  process_young_adults_data.py  pyproject.toml
config/: preprocessing.py
older_adults/: experiment_time.csv  extraction.ipynb  extraction.py  merge_with_self_report.ipynb  process_older_adults_data.ipynb  process_older_adults_data.py  readme.txt
src/: extraction.py  merge.py  preprocessing.py
src/silver_pain/: merge.py  preprocessing.py
src/silver_pain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
young_adults/: experiment_time.csv
