[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silver-pain"
version = "0.1.0"
description = "Utilities for extracting, preprocessing, and aligning SILVER-Pain dataset signals."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["silver_pain*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
